fix card overflow, add custom scrollbar

--- a/uwlink/static/feed.css
+++ b/uwlink/static/feed.css
@@ -133,11 +133,7 @@ h1 {
 .stop-scrolling {
   height: 100%;
   overflow: hidden;
-}
-
-.stop-scrolling {
-  height: 100%;
-  overflow: hidden;
+  padding-right: 8px;
 }
 
 .dim {
@@ -189,4 +185,10 @@ h1 {
   background-color: #dddddd;
   border-radius: 10%;
   padding: 3px;
+}
+
+.details-content {
+  height: calc(100% - 30px);
+  width: 100%;
+  overflow: scroll;
 }
