--- a/uwlink/static/styles.css
+++ b/uwlink/static/styles.css
@@ -185,3 +185,17 @@ body {
     flex-direction: column;
     justify-content: space-between;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #6db6e7;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #48a5db;
+}
